# lldb-python

./: .gitignore  README.md  conanfile.txt  download-install-ccache.sh  download-llvm.sh  edit-wheel.py  edit-wheel.sh  lldb.patch  pyproject.toml  python-linking.patch  requirements.txt
.github/conan/: linux-x86_64  macos-armv8
.github/workflows/: build_wheels.yml
test/: CMakeLists.txt  conftest.py  main.c  test_lldb_python.py
